--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,19 +35,17 @@ services:
       - 5432:5432
     volumes: 
       - postgresdata:/var/lib/postgresql/data/
-  # pgadmin4:
-  #   image: dpage/pgadmin4
-  #   restart: always
-  #   container_name: pgadmin4
-  #   environment:
-  #     PGADMIN_DEFAULT_EMAIL: "admin@gmail.com"
-  #     PGADMIN_DEFAULT_PASSWORD: "123456"
-  #   volumes:
-  #     - ./backup:/var/lib/pgadmin/storage/admin_gmail.com
-  #   ports:
-  #     - "8081:80"
-  #   depends_on:
-  #     - postgres
+  pgadmin4:
+    image: dpage/pgadmin4
+    restart: always
+    container_name: pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: "admin@gmail.com"
+      PGADMIN_DEFAULT_PASSWORD: "123456"
+    ports:
+      - "8081:80"
+    depends_on:
+      - postgres
 networks:
   default:
 
